fix overflow

--- a/src/app/Components/KeywordList/KeywordList.module.scss
+++ b/src/app/Components/KeywordList/KeywordList.module.scss
@@ -1,13 +1,11 @@
 .list {
   display: flex;
   flex-direction: column;
+  overflow: auto;
+  flex: 1;
+  width: 200px;
   h2 {
     margin-bottom: 20px;
-  }
-  ol {
-    overflow: auto;
-    height: 100%;
-    width: 200px;
   }
   li {
     & > span {
